--- a/Unit 3 Embedded C/Lesson4/Makefile
+++ b/Unit 3 Embedded C/Lesson4/Makefile
@@ -1,12 +1,12 @@
 CC=arm-none-eabi-
-CFLAGS=-mcpu=cortex-m3 -gdwarf-2  -mthumb
+CFLAGS=-mcpu=cortex-m4 -gdwarf-2  -mthumb -g
 INCS= -I .
 SRC=$(wildcard *.c)
 OBJ=$(SRC:.c=.o)
 LIB=
 As=$(wildcard *.s)
 AsOBJ=$(As:.s=.o)
-ProjectName=app
+ProjectName=cortex-M4
 all: $(ProjectName).bin $(ProjectName).hex
 		@echo "===============$(ProjectName) Build is done ================" 
 %.o:%.s
@@ -17,11 +17,12 @@ $(ProjectName).elf:$(OBJ) $(AsOBJ)
 	$(CC)ld.exe -T linker.ld $(OBJ) $(AsOBJ) $(LIB) -o $@ -Map=Map_file.map
 $(ProjectName).bin:$(ProjectName).elf
 	$(CC)objcopy.exe -O binary $< $@
+	cp $(ProjectName).elf $(ProjectName).axf
 $(ProjectName).hex:$(ProjectName).elf
 	$(CC)objcopy.exe -O ihex $< $@
 clean :
 	rm *.elf *.bin *.hex
 	
 clean_all:
-	rm *.elf *.o *.bin *.hex
+	rm *.elf *.o *.bin *.hex *.axf
 	@echo "===============$(ProjectName) clean is done ================" 
