--- a/GRAD_Project/uart_bug/Debug/makefile
+++ b/GRAD_Project/uart_bug/Debug/makefile
@@ -1,6 +1,5 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
-# Toolchain: GNU Tools for STM32 (11.3.rel1)
 ################################################################################
 
 -include ../makefile.init
@@ -13,6 +12,7 @@ RM := rm -rf
 -include Src/subdir.mk
 -include MCAL/subdir.mk
 -include HAL/subdir.mk
+-include subdir.mk
 -include objects.mk
 
 ifneq ($(MAKECMDGOALS),clean)
@@ -29,23 +29,9 @@ endif
 
 -include ../makefile.defs
 
-OPTIONAL_TOOL_DEPS := \
-$(wildcard ../makefile.defs) \
-$(wildcard ../makefile.init) \
-$(wildcard ../makefile.targets) \
-
-
-BUILD_ARTIFACT_NAME := uart_bug
-BUILD_ARTIFACT_EXTENSION := axf
-BUILD_ARTIFACT_PREFIX :=
-BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
-
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
 uart_bug.axf \
-
-MAP_FILES += \
-uart_bug.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
@@ -64,56 +50,47 @@ uart_bug.srec \
 
 
 # All Target
-all: main-build
-
-# Main-build Target
-main-build: uart_bug.axf secondary-outputs
+all: uart_bug.axf secondary-outputs
 
 # Tool invocations
-uart_bug.axf uart_bug.map: $(OBJS) $(USER_OBJS) C:\Users\medoo\Desktop\WorkSpace\uart_bug\STM32F103C6TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -gdwarf-2 -o "uart_bug.axf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\medoo\Desktop\WorkSpace\uart_bug\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="uart_bug.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+uart_bug.axf: $(OBJS) $(USER_OBJS) C:\Users\Ahmed\STM32CubeIDE\workspace_1.4.0\GRAD_Project\uart_bug\STM32F103C6TX_FLASH.ld
+	arm-none-eabi-gcc -gdwarf-2 -o "uart_bug.axf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Ahmed\STM32CubeIDE\workspace_1.4.0\GRAD_Project\uart_bug\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="uart_bug.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+default.size.stdout: $(EXECUTABLES)
 	arm-none-eabi-size  $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-uart_bug.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+uart_bug.list: $(EXECUTABLES)
 	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "uart_bug.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-uart_bug.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+uart_bug.hex: $(EXECUTABLES)
 	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "uart_bug.hex"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-uart_bug.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+uart_bug.bin: $(EXECUTABLES)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "uart_bug.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-uart_bug.srec: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+uart_bug.srec: $(EXECUTABLES)
 	arm-none-eabi-objcopy  -O srec $(EXECUTABLES) "uart_bug.srec"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) default.size.stdout uart_bug.axf uart_bug.bin uart_bug.hex uart_bug.list uart_bug.map uart_bug.srec
+	-$(RM) *
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN) $(OBJCOPY_SREC)
 
-fail-specified-linker-script-missing:
-	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
-	@exit 2
-
-warn-no-linker-script-specified:
-	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
-
-.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified
+.PHONY: all clean dependents
+.SECONDARY:
 
 -include ../makefile.targets
